[project]
name = "devops-openenv"
version = "0.1.0"
description = "AIOps Incident Command Environment"
dependencies = [
    "fastapi",
    "uvicorn",
    "streamlit",
    "pydantic",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build_meta"